WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
265755
[LBSE] Fix some masker issues
https://bugs.webkit.org/show_bug.cgi?id=265755
Summary
[LBSE] Fix some masker issues
Rob Buis
Reported
2023-12-03 10:32:00 PST
Fix some masker issues.
Attachments
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2023-12-03 10:38:30 PST
Pull request:
https://github.com/WebKit/WebKit/pull/21238
EWS
Comment 2
2023-12-06 13:23:11 PST
Committed
271631@main
(1e7aa8e2316a): <
https://commits.webkit.org/271631@main
> Reviewed commits have been landed. Closing PR #21238 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-12-06 13:24:17 PST
<
rdar://problem/119272429
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug