[LBSE] Fix some masker issues https://bugs.webkit.org/show_bug.cgi?id=265755

Reviewed by Nikolas Zimmermann.

Clients of masks were not properly added in ReferencedSVGResources::referencedSVGResourceIDs, add logic for that, now
repaint rect results for the mask-object-bounding-box* tests are more as expected than before.
Also the mask-object-bounding-box* tests used the wrong unit attribute, to be consistent with the equivalent
clip-path tests 'maskContentUnits' should be used. Finally, some more tests pass now, so update TestExpectations.

* LayoutTests/platform/mac-sonoma-wk2-lbse-text/TestExpectations:
* LayoutTests/svg/repaint/mask-object-bounding-box-expected.txt:
* LayoutTests/svg/repaint/mask-object-bounding-box-shrink-expected.txt:
* LayoutTests/svg/repaint/mask-object-bounding-box-shrink.html:
* LayoutTests/svg/repaint/mask-object-bounding-box-transformed-expected.txt:
* LayoutTests/svg/repaint/mask-object-bounding-box-transformed.html:
* LayoutTests/svg/repaint/mask-object-bounding-box.html:
* LayoutTests/svg/repaint/mask-user-space-on-use-expected.txt:
* LayoutTests/svg/repaint/mask-user-space-on-use-transformed-expected.txt:
* Source/WebCore/rendering/ReferencedSVGResources.cpp:
(WebCore::ReferencedSVGResources::referencedSVGResourceIDs):
* Source/WebCore/rendering/ReferencedSVGResources.h:
* Source/WebCore/rendering/RenderElement.cpp:
(WebCore::RenderElement::updateReferencedSVGResources):

Canonical link: https://commits.webkit.org/271631@main